# memcorder

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE
scripts/: find_instructions_that_touch_memory.py
src/memcorder/: buffer.c  buffer.h  channel.c  channel.h  event.c  event.h  memory.h  memory_x86.c  recorder.c  recorder.h  util.c  util.h
test/: x86_read_tests.cpp  x86_write_tests.cpp
test/memcorder/: recorder_tests.cpp
